# whisper_app

./: .cursorrules  .gitattributes  .gitignore  .mimoignore  .project_index.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEBUG_AUDIT_BASIC.md  DEBUG_RUNTIME_BASIC.md  LICENSE  PROJECT_INDEX.md  README.md  THIRD_PARTY_NOTICES.md  build.bat  build_embed_installer.bat  config.json  configuration.json  gui.py  installer.iss  installer_embed.iss  o''ut [s p a c e s] (paren).srt  o''ut [s p a c e s] (paren).txt  pyproject.toml  requirements.txt  run_tests.bat  whisper_project.spec  whisper_project_basic.spec  whisper_project_onedir.spec  whisper_project_onefile.spec
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  macos-app.yml  macos-build.yml  macos-compileall-script-test.yml  macos-e2e.yml  macos-harsh.yml  macos-health.yml  macos-py311.yml  macos-test-matrix.yml
app/: __init__.py  app.py  observability.py  paths_util.py
app/dialogs/: __init__.py  about.py  advanced.py  crash.py  diagnose.py  hub_setup.py  model_download.py  model_loading.py  show_log.py  statistics.py  transcript_viewer.py
app/domain/: __init__.py  languages.py  tasks.py
app/services/: __init__.py  download_service.py  format_service.py  integrations_service.py  transcription_service.py
app/widgets/: __init__.py  console.py  dropzone.py  error_dialog.py  hardware_wizard.py  platform.py  tabs.py  tooltip.py  tray.py
assets/: make_icon.py  whisper.icns
core/: __init__.py  _checkpoint.py  _errors.py  _liveness_tick.py  _proc.py  _threads.py  _timecode.py  alignment.py  burn_subs.py  chapters.py  config.py  convert.py  diarization.py  error_messages.py  hallucination.py  hardware.py  health_check.py  history.py  hub.py  llm.py  logging_setup.py  model_manager.py  monitors.py  optional_deps.py  paths.py  recorder.py  search.py  separator.py  stats.py  task.py  tiling.py  transcriber.py  updates.py  url_kind.py  voiceprint.py  watcher.py  worker.py
core/backends/: __init__.py  availability.py  base.py  cloud_stt.py  faster_whisper_be.py  google_cloud_stt.py  nvidia_asr.py  parakeet.py  whisper_cpp.py
core/integrations/: __init__.py  otranscribe.py  smtv.py
core/server/: __init__.py  httpd.py  jobs.py
core/writers/: __init__.py  base.py  docx_writer.py  elan.py  express_scribe.py  inqscribe.py  json_writer.py  lrc.py  md.py  otr.py  pdf_writer.py  smtv_docx_writer.py  srt.py  tsv.py  txt.py  vtt.py
docs/: ARCHITECTURE.md  AUDIT_2026-05-25_boundary_bugs.md  BUILD.md  CHANGELOG.md  CLOUD_STT.md  CLOUD_STT_GOOGLE.md  COMPETITIVE_ANALYSIS_2026.md  CONFIG.md  CONTINUE_AUTOPILOT.md  DECISIONS.md  EXECUTION_ROADMAP.md  FINAL_FREEZE_AUDIT_2026-05-21.md  GAPS_AGAINST_PEERS_2026.md  HANDOFF_NEXT_SESSION.md  INSTALL.md  MACOS_QA_ADDITIONS.md  MANUAL_STEPS.md  NEXT_SESSION_HANDOFF.md  PHASE_1_BRIEF.md  PHASE_2A_ACCEPTANCE.md  PHASE_NEXT_BRIEF.md  README.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.7.1.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.3.1.md  RELEASE_NOTES_v1.3.2.md  RELEASE_NOTES_v1.3.3.md  RELEASE_NOTES_v1.3.4.md  RELEASE_NOTES_v1.3.5.md  RELEASE_NOTES_v1.3.9.md  RELEASE_NOTES_v1.5.0.md  RELEASE_PROCESS.md  RESUME_STATE_2026-06-06.md  ROADMAP.md  SENIOR_REVIEW_2026-05-21.md  (+13 more)
docs/evaluations/: GEMMA4_EVALUATION_2026-06.md
docs/history/: AUDIT.md  AUDIT_2026-05-25_boundary_bugs.md  CROSS_PLATFORM_ROADMAP.md  DEEP_AUDIT_BRIEF.md  GAPS_AUDIT_2026-07-04_findings.md  MACOS_QA_ADDITIONS.md  NEXT_SESSION_HANDOFF.md  PHASE_0_ACCEPTANCE.md  PHASE_1B_ACCEPTANCE.md  PHASE_1_ACCEPTANCE.md  PHASE_1_BRIEF.md  PHASE_3A_ACCEPTANCE.md  PHASE_NEXT_BRIEF.md  README.md  RELEASE_PLAN_v1.3.8.md  SESSION_DUAL_DELIVERABLE.md  WhisperProjectDebug.spec
docs/integrations/: README.md  otranscribe-acceptance.md  otranscribe-brief.md  otranscribe-research.md  smtv-acceptance.md  smtv-brief.md  smtv-research.md  smtv-translator-bridge-research.md
docs/release-notes/: RELEASE_NOTES_v1.0.1.md  RELEASE_NOTES_v1.0.2.md  RELEASE_NOTES_v1.0.3.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.2.md  RELEASE_NOTES_v1.3.6.md  RELEASE_NOTES_v1.3.7.md  RELEASE_NOTES_v1.3.8.md  RELEASE_NOTES_v1.4.0.md
docs/roadmap/: README.md  V08_FEATURE_RESEARCH.md  (+1 more)
stats/: transcription_stats.php
tests/: conftest.py
tools/: download_diarization_models.bat  e2e_cancel_pause.py  e2e_slim_pastbugs.py  e2e_tiny_macos.py  index_refresh.py  measure_startup.py
测试中文🎵/: 天气好.json
(+214 files in other folders)
