[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-project"
version = "1.3.0"
description = "Local Whisper desktop app — offline transcription + yt-dlp/SMTV download + oTranscribe round-trip"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Whisper Project authors" }]
keywords = ["whisper", "transcription", "speech-to-text", "yt-dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "faster-whisper>=1.0.3",
    "requests>=2.31.0",
    "sv-ttk>=2.6.0",
    "platformdirs>=4.0.0",
    # Session-13 / Session-14 runtime deps that were previously
    # only in requirements.txt — kept here too so `pip install
    # whisper-project` yields a runnable install.
    "python-docx>=1.0",
    "tkinterdnd2>=0.4.0",
    "sherpa-onnx>=1.10",
    "python-vlc>=3.0",
    "reportlab>=4.0",
    "watchdog>=3.0",
    "pystray>=0.19",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
    "pyright>=1.1.350",
]
crash_reporting = [
    "sentry-sdk>=1.40,<3",
]
theme_detection = [
    "darkdetect>=0.8.0",
]
backend_cpp = [
    # whisper.cpp backend — opt-in because the ggml model download
    # is 1.1 GB and pywhispercpp transitively pulls a native lib.
    "pywhispercpp>=1.4",
]
alignment = [
    # stable-ts word-level alignment — opt-in because it transitively
    # pulls torch (~125 MB).
    "stable-ts>=2.17",
]

[project.scripts]
whisper-project = "app:run"

[project.urls]
Homepage = "https://github.com/Milomilo777/whisper_project_direct_download_v2"
Repository = "https://github.com/Milomilo777/whisper_project_direct_download_v2"

[tool.setuptools.packages.find]
include = ["app*", "core*"]
exclude = ["tests*", "build*", "dist*", "docs*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = false
source = ["core", "app"]
omit = ["**/__pycache__/*", "tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.pyright]
include = ["core", "app"]
exclude = ["**/__pycache__", "build", "dist", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = "warning"
reportMissingTypeStubs = false
